<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="updateHandler"
            type="tv.utao.x5.StartActivity.UpdateHandler" />
    </data>
    <FrameLayout
        android:id="@+id/startX5Container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray">
        <LinearLayout
            android:id="@+id/startX5Wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E3EDCD"
            android:focusable="false"
            android:gravity="center"
            android:visibility="visible"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/progressWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:max="100"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_marginBottom="50dp" />

                <TextView
                    android:id="@+id/progressTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/fontSmall"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressLoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible"
                android:indeterminate="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontDefault"
                android:textColor="@color/black"
                android:text="@string/desc"
                android:layout_marginTop="16dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/updateApkWrapper"
            android:layout_width="match_parent"
            android:background="#E3EDCD"
            android:layout_height="match_parent"
            android:focusable="true"
            android:descendantFocusability="afterDescendants"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical">
            <ProgressBar
                android:id="@+id/progressApk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:max="100"
                android:visibility="gone"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_marginBottom="50dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontDefault"
                android:textColor="@color/black"
                android:text="@string/updateDesc"
                android:layout_marginTop="16dp" />
            <TextView
                android:id="@+id/updateDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontDefault"
                android:textColor="@color/black"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:id="@+id/updateBtnWrapper"
                android:layout_width="match_parent"
                android:gravity="center"
                android:focusable="true"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/updateOkBtn"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/fontDefault"
                    android:textColor="@color/black"
                    android:text="@string/updateOk"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/login_btn_select"
                    android:onClick="@{()->updateHandler.updateOk()}"
                    android:layout_height="wrap_content">
                </Button>
                <Button
                    android:id="@+id/updateCancelBtn"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/fontDefault"
                    android:textColor="@color/black"
                    android:text="@string/updateCancel"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:onClick="@{()->updateHandler.updateCancel()}"
                    android:background="@drawable/login_btn_select"
                    android:layout_height="wrap_content">
                </Button>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</layout>