<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="tv.utao.x5.domain.DetailMenu"/>
        <variable
            name="menu"
            type="tv.utao.x5.domain.DetailMenu"/>
        <import type="android.view.View" />
        <variable
            name="menuTitleHandler"
            type="tv.utao.x5.BaseWebViewActivity.MenuTitleHandler" />
    </data>
    <FrameLayout
        android:id="@+id/webViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray">
        <LinearLayout
            android:id="@+id/webviewWrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E3EDCD"
            android:gravity="center"
            android:focusable="false"
            android:visibility="visible"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">
            <com.tencent.smtt.sdk.WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:focusable="false" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fullscreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E3EDCD"
            android:focusable="false"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:orientation="vertical"
            android:focusable="true"
            android:visibility="gone"
            android:id="@+id/tvMenu">
            <LinearLayout
                android:id="@+id/tvMenuTitle"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        style="?android:attr/button"
                        android:id="@+id/xjBtn"
                        android:tag="menu_xj"
                        android:textSize="@dimen/fontDefault"
                        android:textColor="@color/black"
                        android:text="@{menu.video?@string/xj:@string/zb}"
                        android:layout_margin="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_btn_select"
                        android:focusable="true"
                        android:padding="8dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:visibility="@{(menu.video&amp;&amp;menu.xjs.size>0&amp;&amp;(menu.now.xj.index+1)&lt;menu.xjs.size)?View.VISIBLE:View.GONE}"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/nextBtn"
                        android:tag="menu_next"
                        android:text="@string/next"
                        android:onClick="@{()->menuTitleHandler.nextBtn()}"
                        android:textSize="@dimen/fontDefault"
                        android:textColor="@color/black"
                        android:layout_margin="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_btn_select"
                        android:focusable="true"
                        android:padding="8dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:visibility="@{(menu.video&amp;&amp;menu.jds.size>0)?View.VISIBLE:View.GONE}"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/jdBtn"
                        android:tag="menu_jd"
                        android:text="@string/jd"
                        android:textSize="@dimen/fontDefault"
                        android:textColor="@color/black"
                        android:layout_margin="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_btn_select"
                        android:focusable="true"
                        android:padding="8dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="@{(menu.hzs.size>0)?View.VISIBLE:View.GONE}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        style="?android:attr/button"
                        android:id="@+id/hzBtn"
                        android:textSize="@dimen/fontDefault"
                        android:textColor="@color/black"
                        android:tag="menu_hz"
                        android:text="@{menu.now.hz.name}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:layout_margin="8dp"
                        android:visibility="visible"
                        android:background="@drawable/login_btn_select"
                        android:padding="8dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:visibility="@{menu.rates.size>0?View.VISIBLE:View.GONE}"
                    android:layout_height="wrap_content">
                    <Button
                        style="?android:attr/button"
                        android:id="@+id/rateBtn"
                        android:tag="menu_rate"
                        android:textSize="@dimen/fontDefault"
                        android:textColor="@color/black"
                        android:text="@{@string/rate+menu.now.rate.name}"
                        android:layout_margin="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_btn_select"
                        android:focusable="true"
                        android:padding="8dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:visibility="visible"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/reloadBtn"
                        android:tag="menu_reload"
                        android:text="@string/reload"
                        android:onClick="@{()->menuTitleHandler.reloadBtn()}"
                        android:textSize="@dimen/fontDefault"
                        android:textColor="@color/black"
                        android:layout_margin="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_btn_select"
                        android:focusable="true"
                        android:padding="8dp" />
                </LinearLayout>

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/jds_view"
                android:visibility="@{menu.tab.equals(`jd`)?View.VISIBLE:View.GONE}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hzs_view"
                android:visibility="@{menu.tab.equals(`hz`)?View.VISIBLE:View.GONE}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/xjs_view"
                android:visibility="@{menu.tab.equals(`xj`)?View.VISIBLE:View.GONE}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rates_view"
                android:visibility="@{menu.tab.equals(`rate`)?View.VISIBLE:View.GONE}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </FrameLayout>
</layout>